--- a/html/assets/scss/_join.scss
+++ b/html/assets/scss/_join.scss
@@ -69,7 +69,7 @@
         margin-bottom: 30px;
         label {
             display: block;
-            font-size: 24px;
+            font-size: 20px;
             margin-bottom: 5px;
         }
         input {
@@ -81,6 +81,11 @@
             font-size: 20px;
             font-weight: 300;
             box-sizing: border-box;
+        }
+        .msg {
+            width: 100%;
+            padding: 10px;
+            color: red;
         }
     }
 }
@@ -95,4 +100,62 @@
     border-radius: 5px;
     cursor: pointer;
     margin-top: 100px;
+}
+
+// 관리자 회원가입
+#join.admin {
+    padding: 110px 0 70px;
+}
+.join__box {
+    > div.overlap {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        label {
+            width: 100%;
+        }
+        input {
+            width: 78%;
+        }
+        .check {
+            @include btn_style1;
+            width: 20%;
+            text-align: center;
+            font-size: 20px;
+            line-height: 36px;
+        }
+        .msg {
+            width: 100%;
+            padding: 10px;
+            color: red;
+        }
+    }
+    .list {
+        h3 {
+            font-size: 20px;
+            margin-bottom: 5px;
+        }
+        ul {
+            padding: 20px;
+            background: white;
+            border-radius: 5px;
+            li {
+                line-height: 1.4;
+                color: #666;
+            }
+        }
+        span {
+            display: block;
+            padding: 10px 0;
+
+            input {
+                width: auto;
+            }
+            label {
+                display: inline-block;
+                font-size: 18px;
+            }
+        }
+    }
 }
