--- a/html/assets/scss/_card.scss
+++ b/html/assets/scss/_card.scss
@@ -1,40 +1,57 @@
-#card {
+#card  {
     h2 {
+        display: inline-block;
         font-size: 1rem;
         border: 1px solid $black;
         padding: 0.5rem 1rem;
-        display: inline-block;
         margin-bottom: 1rem;
         margin-top: 50px;
     }
 }
-
 .card__inner {
     @include flex_sb;
-    @include border_bottom;
     padding-bottom: 70px;
+    align-items: flex-start;
+    @include border_bottom;
 
-    &::before {
-        content: "";
-        width: 100%;
-        height: 1px;
-        background: $black;
-        position: absolute;
-        left: 0;
-        bottom: -8px;
+    &.horizon {
+        .card {
+            width: 100%;
+            display: flex;
+            margin-bottom: 10px;
+            justify-content: space-between;
+
+            h3 {
+                margin-top: 0;
+            }
+
+            figure {
+                width: 30%;
+            }
+            >div {
+                width: 67%;
+            }
+        }
     }
-
-    > div {
+    .card {
+        position: relative;
         width: 24%;
-
+        height: 300px;
+        .cate{
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            background: #fff;
+            font-size: 12px;
+            padding: 5px 13px;
+            border-radius: 30px;
+        }
         figure {
             position: relative;
             overflow: hidden;
-
             img {
                 filter: saturate(0%);
                 transition: all 0.3s;
-
                 &:hover {
                     filter: saturate(100%);
                 }
@@ -55,23 +72,63 @@
                 transition: all 0.6s ease;
                 opacity: 0;
             }
-
             &:hover .go {
+                transform: translateX(0%) rotate(0);
                 opacity: 1;
-                transform: translateX(0) rotate(0);
             }
         }
+        h3 {
+            font-size: 1.3rem;
+            line-height: 1;
+            margin-top: 0.3em;
+            margin-bottom: 0.5em;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+        p {
+            font-size: 1rem;
+            font-weight: 300;
+            line-height: 1.5;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+        }
     }
-
-    h3 {
-        font-size: 1.3rem;
-        line-height: 1.7;
-        margin-top: 0.3em;
+}
+#blogSearch {
+    text-align: center;
+    padding: 100px 0;
+    border-bottom: 3px solid #000;
+    position: relative;
+    &::after {
+        content: '';
+        width: 100%;
+        height: 1px;
+        background: #000;
+        position: absolute;
+        left: 0;
+        bottom: -7px;
     }
-
-    p {
-        font-size: 1rem;
-        font-weight: 300;
-        line-height: 1.5;
+    h2 {
+        font-size: 30px;
+        margin-bottom: 30px;
+    }
+    legend {
+        @include blind;
+    }
+    input {
+        border: 1px solid #eee;
+        padding: 12px 30px;
+        font-size: 20px;
+    }
+    button {
+        background-color: #000;
+        font-size: 20px;
+        color: #fff;
+        border-radius: 50px;
+        padding: 10px 30px;
     }
 }
