--- a/html/assets/scss/_footer.scss
+++ b/html/assets/scss/_footer.scss
@@ -4,10 +4,12 @@
     }
 }
 .footer__inner {
+    @include border_top;
     @include flex_sb;
     padding-top: 10px;
     font-size: 1rem;
     color: #666;
     padding-bottom: 100px;
     font-weight: 300;
+    margin-top: 100px;
 }
