--- a/html/assets/scss/_mixin.scss
+++ b/html/assets/scss/_mixin.scss
@@ -42,6 +42,21 @@
     }
 }
 
+@mixin border_top {
+    position: relative;
+    border-top: 3px solid $black;
+
+    &::before {
+        content: "";
+        width: 100%;
+        height: 1px;
+        background: #000;
+        position: absolute;
+        left: 0;
+        top: 6px;
+    }
+}
+
 // 버튼 스타일
 @mixin btn_style1 {
     background: $black;
@@ -121,4 +136,38 @@
     &::after {
         clear: both;
     }
+}
+
+// 한줄효과
+@mixin row1 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+// 두줄효과
+@mixin row2 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+// 세줄효과
+@mixin row3 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
+// 네줄효과
+@mixin row4 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
